# SMARCA5

./: .gitignore  README.md  codecov.yaml  pyproject.toml  run-checks.bat  run-checks.sh
.github/workflows/: Install.yml  Lint.yml  Unit-tests.yml
smarca5/: App.py  __init__.py  alignment.py  html_page.py  html_raport.py  html_report.py  index.html  main.py  style.css
smarca5/html_files/: index.html  style.css
smarca5/icons/: README.md
tests/: test_smarca5.py
