[tool.poetry]
name = "SMARCA5"
version = "0.1.0"
description = ""
authors = ["Jakub Lechowski <b.kuba.13@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"
openpyxl = "^3.0.10"
ttkbootstrap = "^1.9.0"
beautifulsoup4 = "^4.11.1"
colour = "^0.1.5"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
flake8 = "^5.0.3"
pydocstyle = "^6.1.1"
mypy = "^0.971"
coverage = "^6.4.2"
Nuitka = "^1.0.4"
ordered-set = "^4.1.0"
pydirectory = "^0.1.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
